0.05
 - Update Module::Install to 1.19 version.

0.04 2015-10-29T20:04:23+01:00
 - Add reset() method.
 - Fix requires.
 - Improve tests.

0.03 2015-10-27T12:12:48+01:00
 - Add EXAMPLE2 example to doc.
 - Add documentation for state() method.
 - Add tests.
 - Fix report() method in doc.
 - Implement state() method, which is better than Memory::Usage->state().
 - Implement record() method, which can has undefined message.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Improve report() method return values.
 - Move author tests to xt/ directory.
 - Update Module::Install to 1.16 version.
 - Update copyright years in LICENSE file.

0.02 2014-11-08T08:29:33+01:00
 - Fix dump() across Memory::Usage->dump().
 - Fix report() across Memory::Usage->report() in scalar mode.

0.01 2014-11-07T12:26:38+01:00
 - First version.