@@ -1,7 +1,7 @@
 ---
 abstract: 'Memory process reporting.'
 author:
-  - 'Michal Spacek <skim@cpan.org>'
+  - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.36
   IO::CaptureOutput: 0
