@@ -144,12 +144,12 @@ REPOSITORY
     <https://github.com/tupinek/Memory-Process>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz/>
 
 LICENSE AND COPYRIGHT
-     © 2014-2015 Michal Špaček
+     © 2014-2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
