@@ -1,4 +1,5 @@
 0.05
+ - Update author name.
  - Update Module::Install to 1.19 version.
 
 0.04 2015-10-29T20:04:23+01:00
